--- a/play.yml
+++ b/play.yml
@@ -1,9 +1,10 @@
 ---
 
-- name: Install tensorflow-gpu
+- name: Install tensorflow
   hosts: localhost
+  connection: local 
   tasks:
 
     - name: Install tensorflow
       pip:
-        name: tensorflow-gpu
+        name: tensorflow
